--- a/Octokit/OctokitSample.csproj
+++ b/Octokit/OctokitSample.csproj
@@ -47,6 +47,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Release\OctokitSample.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup>
     <StartupObject>OctokitSample.Program</StartupObject>
@@ -80,6 +81,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ReactiveSample.cs" />
     <Compile Include="Sample.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
